--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flux": "^2.1.1",
     "gulp-uglify": "^1.1.0",
     "node-uuid": "^1.4.2",
+    "object-assign": "^4.0.1",
     "rc-calendar": "^5.2.0",
     "react": "^0.14",
     "react-dom": "^0.14.3",
